# recycle-rm

./: Cargo.toml  README.md  install.sh  uninstall.sh
src/: db.rs  main.rs
tests/: difftest.sh  fuzz.sh  trash_test.sh
